<?xml version="1.0"?>
<package>
  <name>ros-utils</name>
  <version>0.0.0</version>
  <description>General Utilies for Robotics involving ROS</description>

  <maintainer email="harshinha2@gmail.com">harsh</maintainer>
  <author email="harshinha2@gmail.com">Harsh Sinha</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>cv_bridge</buildtool_depend>
  <buildtool_depend>tf</buildtool_depend>
  <buildtool_depend>image_transport</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>


  <export>
  </export>

</package>
